--- a/css/style.css
+++ b/css/style.css
@@ -25,17 +25,51 @@ a {
   display: none;
 }
 
+.container {
+  width: 940px;
+  margin: 0 auto;
+
+}
+
+/* Временные стили */
+
+
+
 /* Шапка */
 
 .header-main {
+  display: flex;
+  flex-direction: column;
   background-color: #f3f7f9;
 }
 
 .header-top {
+  margin-bottom: 45px;
   font-size: 17px;
   line-height: 18px;
   color: #ffffff;
   background-color: #293449;
+}
+
+.header-top .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header-logo {
+  padding: 13px 55px;
+  background-color: #ee3643;
+}
+
+.header-quicklinks {
+  width: 435px;
+}
+
+.header-bottom {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 45px;
 }
 
 .header-main .search-input {
@@ -87,6 +121,8 @@ a {
 }
 
 .header-description {
+  width: 200px;
+  margin-left: 53px;
   font-size: 16px;
   font-style: italic;
   line-height: 23px;
@@ -94,6 +130,7 @@ a {
 }
 
 .header-contacts {
+  width: 270px;
   text-align: center;
 }
 
@@ -113,6 +150,10 @@ a {
   line-height: 21px;
   color: #000000;
   background-color: #ffffff;
+}
+
+.user-navigation {
+  width: 230px;
 }
 
 .user-navigation ul {
@@ -156,6 +197,7 @@ a {
 /* Главное меню */
 
 .header-main .main-menu {
+  margin-bottom: 60px;
   font-size: 17px;
   line-height: 17px;
   color: #ffffff;
@@ -163,6 +205,10 @@ a {
 }
 
 .main-menu ul {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  padding: 25px 52px;
   list-style-type: none;
 }
 
@@ -176,10 +222,24 @@ a {
   background-color: #1d2739;
 }
 
+.index-columns {
+  display: flex;
+  justify-content: space-between;
+}
+
+.main-about {
+  width: 520px;
+}
+
+.main-contacts {
+  width: 300px;
+}
+
 .main-about h2,
 .main-contacts h2 {
   font-size: 30px;
   line-height: 30px;
+  text-transform: uppercase;
 }
 
 .main-about p,
