--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ a {
 }
 
 .header-top {
-  margin-bottom: 45px;
+  margin-bottom: 50px;
   font-size: 17px;
   line-height: 18px;
   color: #ffffff;
@@ -58,22 +58,22 @@ a {
 }
 
 .header-logo {
-  padding: 13px 55px;
+  padding: 13px 55px 7px 55px;
   background-color: #ee3643;
 }
 
 .header-quicklinks {
-  margin: auto;
+  margin-left: auto;
 }
 
 .header-bottom {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 45px;
+  margin-bottom: 40px;
 }
 
 .header-main .search-input {
-  margin-left: 50px;
+  margin-left: 45px;
   color: #ffffff;
   background-color: #293449;
 }
@@ -142,6 +142,7 @@ a {
 }
 
 .header-address {
+  margin: 0;
   font-size: 14px;
   color: #32425c;
 }
@@ -158,6 +159,8 @@ a {
 }
 
 .user-navigation ul {
+  margin: 0;
+  padding: 0;
   list-style-type: none;
 }
 
@@ -387,8 +390,22 @@ a {
 
 .footer-logo {
   margin-right: 170px;
+  margin-bottom: 30px;
   padding: 20px 40px;
   background-color: #ee3643;
+}
+
+.footer-contacts {
+  width: 325px;
+  margin: 0 90px 0 0;
+}
+
+.footer-menu-main {
+  display: flex;
+  justify-content: space-between;
+  width: 550px;
+  margin: 42px 0 0;
+  padding: 0;
 }
 
 .footer-menu-main,
@@ -397,6 +414,11 @@ a {
 }
 
 .footer-menu-extra {
+  display: flex;
+  justify-content: space-between;
+  width: 525px;
+  margin: 0;
+  padding: 0;
   color: #ffd180;
 }
 
@@ -416,6 +438,8 @@ a {
 }
 
 .footer-bottom {
+  margin-top: 50px;
+  padding: 40px 0 35px 0;
   font-size: 16px;
   line-height: 18px;
   color: #ffffff;
@@ -428,7 +452,20 @@ a {
 
 .footer-copyright {
   width: 230px;
-  margin-right: 160px;
+  margin: 0 160px 0 0;
+}
+
+.footer-dev-contacts {
+  display: flex;
+  justify-content: space-between;
+  width: 290px;
+  margin-left: auto;
+  padding-right: 15px;
+}
+
+.footer-feedback,
+.footer-developer {
+  margin: 0;
 }
 
 .footer-feedback a,
@@ -448,11 +485,8 @@ a {
   color: #ee3643;
 }
 
-.footer-social {
-  margin-right: 130px;
-}
-
 .footer-social ul {
+  margin: 0;
   padding: 0;
   list-style-type: none;
 }
