--- a/css/style.css
+++ b/css/style.css
@@ -393,6 +393,8 @@ a.header-bookmarks {
 
 .main-about p,
 .main-contacts p {
+  margin: 0;
+  margin-bottom: 30px;
   font-family: 'PT Sans', Arial, sans-serif;
   font-size: 13px;
 }
@@ -402,11 +404,6 @@ a.header-bookmarks {
 .container h2 {
   margin: 0;
   margin-bottom: 35px;
-}
-
-.container p {
-  margin: 0;
-  margin-bottom: 30px;
 }
 
 .companies-list {
@@ -536,6 +533,7 @@ a.header-bookmarks {
 .catalog-item {
   width: 220px;
   margin: 0 20px 20px 0;
+  outline: 2px solid #e5e5e5;
   list-style-type: none;
 }
 
@@ -549,23 +547,38 @@ a.header-bookmarks {
 }
 
 .catalog-content-container h3 {
+  margin: 0;
+  margin-bottom: 18px;
   font-size: 18px;
   line-height: 20px;
+  text-align: center;
 }
 
 .catalog-item-price {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   font-size: 17px;
   line-height: 18px;
 }
 
 .old-price {
+  margin-bottom: 13px;
   color: #999999;
   text-decoration: line-through;
 }
 
 .new-price {
+  padding: 10px 40px 10px 36px;
+  margin-bottom: 20px;
   color: #ffffff;
-  background-color: #ee3341;
+  background-image: url(../img/red-button.svg);
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.catalog-item-buttons {
+  display: none;
 }
 
 .catalog-item-buttons button {
@@ -619,10 +632,21 @@ a.header-bookmarks {
 }
 
 .footer-logo {
+  position: relative;
   margin-right: 170px;
   margin-bottom: 30px;
-  padding: 20px 40px;
+  padding: 20px 41px;
   background-color: #ee3643;
+}
+
+.footer-logo::after {
+  content: '';
+  position: absolute;
+  top: 68px;
+  left: 0;
+  width: 220px;
+  height: 5px;
+  background-color: #b62430;
 }
 
 .footer-contacts {
@@ -716,18 +740,28 @@ a.header-bookmarks {
 }
 
 .footer-social ul {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 130px;
   margin: 0;
   padding: 0;
   list-style-type: none;
 }
 
-.footer-bottom .social-button {
+.social-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 42px;
+  height: 42px;
+  border-radius: 50%;
   color: #ffffff;
   background-color: #212a3a;
 }
 
-.footer-bottom .social-button:focus,
-.footer-bottom .social-button:hover,
-.footer-bottom .social-button:active {
+.social-button:focus,
+.social-button:hover,
+.social-button:active {
   background-color: #ee3643;
 }
