--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,15 @@
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 body {
+  min-width: 1200px;
   margin: 0;
   font-family: 'Cuprum', Arial, sans-serif;
   font-size: 18px;
@@ -34,9 +45,8 @@ a {
 /* Шапка */
 
 .header-main {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 60px;
+  margin-bottom: 59px;
+  border-bottom: 1px solid transparent;
   background-color: #f3f7f9;
 }
 
